--- a/src/app/features/checkout/components/country-select/country-select.component.html
+++ b/src/app/features/checkout/components/country-select/country-select.component.html
@@ -1,1 +1,7 @@
-<p>country-select works!</p>
+<button id="country-select" mat-stroked-button [matMenuTriggerFor]="countryMenu">
+    {{country}}
+    <mat-icon>expand_more</mat-icon>
+</button>
+<mat-menu #countryMenu="matMenu">
+    <button *ngFor="let cnt of countries" (click)="setCountry(cnt)" mat-menu-item>{{cnt.name}}</button>
+</mat-menu>
