feat: billing ad, shipping ad and payment comps

--- a/src/app/features/checkout/pages/payment/payment.component.html
+++ b/src/app/features/checkout/pages/payment/payment.component.html
@@ -1,1 +1,3 @@
-<p>payment works!</p>
+<app-simple-page number="5" title="Payment" subtitle="Pay for your order" buttonText="PROCEED TO PAY WITH PAYPAL"
+    icon="point_of_sale" (buttonEvent)="navigateToPaypal()" [buttonDisabled]="approvalUrl.length ? false : true">
+</app-simple-page>
