--- a/src/app/features/checkout/pages/shipping-address/shipping-address.component.html
+++ b/src/app/features/checkout/pages/shipping-address/shipping-address.component.html
@@ -1,1 +1,6 @@
-<p>shipping-address works!</p>
+<app-title no="3" title="Shipping Address" subtitle="Address to ship package to"></app-title>
+<app-address-list *ngIf="showAddresses" (setAddressEvent)="setCustomerAddress($event)"></app-address-list>
+<mat-divider *ngIf="showAddresses"></mat-divider>
+<app-address [showTitle]="showAddresses" buttonText="PROCEED TO SHIPPING METHODS"
+    checkboxText="Bill to the same address" (isCheckboxChecked)="setSameBillingAddressAsShipping($event)"
+    (createAddress)="updateShippingAddress($event)"></app-address>
