--- a/src/app/features/checkout/pages/cancel-payment/cancel-payment.component.html
+++ b/src/app/features/checkout/pages/cancel-payment/cancel-payment.component.html
@@ -1,1 +1,2 @@
-<p>cancel-payment works!</p>
+<app-simple-page title="Payment cancelled" subtitle="Your Paypal payment has been cancelled" icon="money_off"
+    buttonText="GO TO HOME" [centerText]="true" route="/"></app-simple-page>
