--- a/src/app/features/checkout/pages/place-order/place-order.component.html
+++ b/src/app/features/checkout/pages/place-order/place-order.component.html
@@ -1,1 +1,2 @@
-<p>place-order works!</p>
+<app-simple-page title="Finalize Order" subtitle="Complete your order" [number]="'6'" icon="shopping_bag"
+    buttonText="PLACE YOUR ORDER" (buttonEvent)="placeOrder()" [buttonDisabled]="disableButton"></app-simple-page>
