fix: fixed errors

--- a/src/app/shared/components/item-quantity/item-quantity.component.html
+++ b/src/app/shared/components/item-quantity/item-quantity.component.html
@@ -1,5 +1,4 @@
-<button mat-stroked-button [matMenuTriggerFor]="menu"
-[disabled]="disabled">
+<button mat-stroked-button [matMenuTriggerFor]="menu" [disabled]="disabled">
     {{quantity}}
     <mat-icon *ngIf="!disabled">expand_more</mat-icon>
 </button>
